syntax = "proto3";

import "google/protobuf/timestamp.proto";

package rogerpeyer;

option java_package = "com.rogerpeyer.spi.proto";

message Order {
  string id = 1;
  int64 version = 2;
  google.protobuf.Timestamp createdOn = 3;
  google.protobuf.Timestamp lastModified = 4;
  repeated OrderItem items = 5;
}

message OrderItem {
  string productId = 1;
  int64 quantity = 2;
}